# ai_sessions

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.base  README.md  avahi_script.sh  docker-compose.rpi.yml  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
app/: face_rec_demo.py  run.py
app/src/: __init__.py
app/src/ai_session/: __init__.py  config.py  events.py  model.py  resources.py  temp_file.py
app/src/chat/: __init__.py  events.py  forms.py  routes.py
app/src/common/: __init__.py  config.py  error_handler.py  get_unique_id.py  temp_file.py
app/src/face_rec/: README.md  __init__.py  face.py  face_rec.py  resources.py
app/src/face_rec/proc/: __init__.py  align_and_crop.py  face_detection.py  profiler.py
app/src/face_rec/store/: __init__.py  face_vector_store.py  registered_faces.py  registered_person.py  versioning.py
app/src/main/: __init__.py  model.py  resources.py
app/src/templates/chat/: chat.html  index.html
chat/: __init__.py  chat.py
monitor/: cl_avahi_manager.sh  cl_monitor.sh  install.sh
src/: app.py  face_rec_demo.py
src/ai_session/: config.py  error_handler.py  events.py  manager.py  model.py  resources.py
src/chat/: __init__.py  events.py
src/face_rec/: face.py  face_rec.py
src/face_rec/proc/: __init__.py  align_and_crop.py  profiler.py
src/face_rec/store/: __init__.py  face_vector_store.py  registered_faces.py  registered_person.py
web_socket/: __init__.py
web_socket/main/: config.py  events.py  resources.py  routes.py  session_manager.py
(+2 files in other folders)
