[project]
name = "ai-session"
version = "1.0"
dependencies = [
    "flask",
    "flask-socketio",
    "flask-wtf",
    "eventlet",
    "gunicorn",
    "flask_smorest",
    "lancedb",
    "sqlalchemy",
    "degirum",
    'marshmallow',
    'dotenv',
    'netifaces',
]

[project.optional-dependencies]
dev = [
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
